# duckbill

./: .gitignore  Cargo.toml  LICENSE  README.md
duckbill/: Cargo.toml
duckbill/src/: duckfile.rs  lib.rs
duckbill/src/duckfile/: duckacctid.rs  duckbill.rs  duckdata.rs  duckerror.rs
justducky/: Cargo.toml
justducky/src/: applogic.rs  gui.rs  main.rs  tui.rs
m_menu/: Cargo.toml
m_menu/src/: lib.rs
src/: lib.rs  main.rs
