[package]
name = "justducky"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckbill = {path = "../duckbill"}
m_menu = { path = "../m_menu"}
native-dialog = { version = "0.7.0", optional = true}

[features]
default = []
native-ui = ["native-dialog"]

