[package]
name = "justducky"
version = "0.2.0"
edition = "2021"
description = "Just Ducky Second Chance Bill Handler"
license = "MIT"
authors = ["Maxwell French <mfrench@watertown-ny.gov>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckbill = {path = "../duckbill"}
m_menu = { path = "../m_menu"}
native-dialog = { version = "0.7.0", optional = true}

[features]
default = []
native-ui = ["native-dialog"]


[build-dependencies]
winresource = "0.1.17"

[package.metadata.winresource]
OriginalFilename = "duckbill.exe"
LegalCopyright = "Copyright © 2024 Maxwell French"
FileDescription = "Just Ducky Second Chance Bill Handler"